--- a/todo.txt
+++ b/todo.txt
@@ -6,13 +6,13 @@ Done - implement per-cell grid table formatting
 Done - delete links
 Done - edit links 
 Done - color grid table links as purple-underlined
-Done  - jump to login page after adding new user (or "Do you want to log in as this user?)
-- Get the domain name working
-- convert to SSH (get Cert?)
+Done - jump to login page after adding new user (or "Do you want to log in as this user?)
+Done - Get the domain name working
 - default order grid by useDate (descending)
+- convert to SSH (get Cert?) - Certbot? 
 - implement data checking (on server) for addUser page
 - Implement groups
 - Create "Friends" - Array of user Ids in each user.
 - Add "stay logged in on this computer"
-- Feature to send emails with link sets.
+- Feature to send emails with link set - LinkShareBot.
 
