--- a/todo.txt
+++ b/todo.txt
@@ -8,7 +8,8 @@ Done - edit links
 Done - color grid table links as purple-underlined
 Done - jump to login page after adding new user (or "Do you want to log in as this user?)
 Done - Get the domain name working
-- Add 'about' page - accordian? 
+Done - Add 'about' page - accordian? 
+- new logo
 - Show last use date as icon.
 - default order grid by useDate (descending)
 - convert to SSH (get Cert?) - Certbot? 
