--- a/todo.txt
+++ b/todo.txt
@@ -9,10 +9,12 @@ Done - color grid table links as purple-underlined
 Done - jump to login page after adding new user (or "Do you want to log in as this user?)
 Done - Get the domain name working
 Done - Add 'about' page - accordian? 
-- new logo
+Done - new logo
+- fix favicon
 - Show last use date as icon.
 - default order grid by useDate (descending)
 - convert to SSH (get Cert?) - Certbot? 
+- caching of links list on browser - prevent reloads.
 - implement data checking (on server) for addUser page
 - Implement groups
 - Create "Friends" - Array of user Ids in each user.
