--- a/todo.txt
+++ b/todo.txt
@@ -11,13 +11,15 @@ Done - Get the domain name working
 Done - Add 'about' page - accordian? 
 Done - new logo
 Done - fix favicon
-- Show last use date as icon.
-- default order grid by useDate (descending)
+Done - Show last use date as icon.
+Done - default order grid by useDate (descending)
 - convert to SSH (get Cert?) - Certbot? 
 - caching of links list on browser - prevent reloads.
-- implement data checking (on server) for addUser page
 - Implement groups
 - Create "Friends" - Array of user Ids in each user.
+- Bulk-assign links to freinds, groups.
 - Add "stay logged in on this computer"
 - Feature to send emails with link set - LinkShareBot.
-
+- allow users to set alarms for events - recurring (week, day), one-shot.
+- YouTube Video for basic use cases.
+- implement data checking (on server ??) for addUser page
