Back-end support for group links in place, updated todo list.

--- a/todo.txt
+++ b/todo.txt
@@ -14,7 +14,14 @@ Done - fix favicon
 Done - Show last use date as icon.
 Done - default order grid by useDate (descending)
 Done - Add Bug/feature report (help?) page. 
-- Implement groups
+Done (first cut) - Implement groups
+- Way to add users to group.
+- Way to add admins to group.
+- allow access to public groups (password? PW on link?)
+- Remove group icon from link list when in group mode (or show other users of link?).
+- Delete groups.
+- check for adding duplicate links to group.
+- Allow user to join existing group. (ie wisdom2020 -> wisdom2020 group)
 - Allow initial URL to direct to a group, user, or link.
 - Add date/day and time (e.g. of zoom call) option
 - move to port 80
