--- a/todo.txt
+++ b/todo.txt
@@ -18,11 +18,11 @@ Done (first cut) - Implement groups
 Done - Way to add users to group.
 Done - Way to add admins to group.
 Done - Implement "add link" button on groups page if permissions are OK.
-- allow access to public groups by "guest" user. 
 - Allow initial URL to direct to a group, user, or link. Include "search" parameter to narrow link lists.
+- allow access to public groups by "guest" user. 
+- Check session security
 - Add waiting animation (twirler or wheel gif.)
 - Convert last-user alert to swal popup.
-- Add user face/avatar icon. Read from Google or Facebook?
 - Twirling "wait" icon when accessinhg server. Snorelax?
 - Remove group icon from link list when in group mode (or show other users of link?).
 - Delete group function needed.
@@ -30,15 +30,16 @@ Done - Implement "add link" button on groups page if permissions are OK.
 - Allow user to request add to group. (ie jsmith -> wisdom2020 group)
 - Add date/day and time (e.g. of zoom call) option
 - move to port 80
+- Add "stay logged in on this computer"
 - Implement "Add to calendar"
+- allow users to set alarms for events - recurring (week, day), one-shot.
 - convert to SSH (get Cert?) - Certbot? 
 - caching of links list on browser - prevent reloads.
 - Create "Friends" - Array of user Ids in each user.
+- Add user face/avatar icon. Read from Google or Facebook?
 - Bulk-assign links to friends, groups.
-- Add "stay logged in on this computer"
 - Feature to send emails with link set - LinkShareBot.
-- allow users to set alarms for events - recurring (week, day), one-shot.
-- YouTube Video for basic use cases.
+- Make a YouTube Video for basic use cases.
 - implement data checking (on server ??) for addUser page
 
 
