--- a/todo.txt
+++ b/todo.txt
@@ -18,18 +18,17 @@ Done (first cut) - Implement groups
 Done - Way to add users to group.
 Done - Way to add admins to group.
 Done - Implement "add link" button on groups page if permissions are OK.
-Done - Allow initial URL to direct to a group, user, or link. 
+Done - "Magic Link" - URL to direct to a group, user, or link. 
 Done - allow access to public groups by "guest" user. 
 Done - Way to remove meeting from group without removing from user
 - move to port 80
 - convert to SSH (get Cert?) - Certbot? 
 - Check session security
 - Make a YouTube Video for basic use cases.
-- Include initial URL "search" parameter to narrow link lists.
-- Make a "create link" button & function to generate the above links. 
+- Implement Magic Link "search" parameter to narrow link lists.
+- Make a "create magic link" button & function to generate the above links. 
 - Add waiting animation (twirler or wheel gif.)
 - Convert last-user alert to swal popup.
-- Twirling "wait" icon when accessinhg server. Snorelax?
 - Remove group icon from link list when in group mode (or show other users of link?).
 - Delete group function needed.
 - check for adding duplicate links to group.
@@ -50,8 +49,8 @@ Phone interface:
 Done (portrait mode)- Detect phone browser clients
 Done - rework list (grid) screens as tiles.
 Done- convert NAV bar into a drop-list.
-- Make sure forms work in portrait mode.
-- Alerts? 
+Done - Make sure forms work in portrait mode.
+Done - Alerts? 
 
 
 Component create steps:
